Added a link to the demo site and a unique icon

--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -1,13 +1,13 @@
 name: Materialize
 version: 1.0.0
 description: "The Materialize theme is built using the popular **Materialize** Framework"
-icon: bold
+icon: google
 author:
   name: Robert J. Rockefeller
   email: bob@bobrockefeller.com
   url: http://www.bobrockefeller.com
 homepage: https://github.com/bobrocke/grav-theme-materialize
-demo:
+demo: http://materialize.bobrockefeller.com/
 keywords: materialize, theme, framework
 bugs: https://github.com/bobrocke/grav-theme-materialize/issues
 license: MIT
