Typography revsions and stylesheet addition

--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -1,6 +1,6 @@
 name: Materialize
 version: 1.3.3
-description: "The Materialize theme is built using the popular **Materialize** Framework"
+description: "The Materialize theme is built using the **Materialize** Framework"
 icon: google
 author:
   name: Bob Rockefeller
