--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -1,5 +1,5 @@
 name: Materialize
-version: 1.3.5
+version: 1.3.6
 description: "The Materialize theme is built using the **Materialize** Framework"
 icon: google
 author:
@@ -16,5 +16,15 @@ dependencies:
   - materializer
 
 form:
-  validation: strict
+  validation: loose
   fields:
+    dropdown.enabled:
+        type: toggle
+        label: Dropdown in navbar
+        highlight: 1
+        default: 1
+        options:
+          1: Enabled
+          0: Disabled
+        validate:
+          type: bool
