--- a/blueprints/item.yaml
+++ b/blueprints/item.yaml
@@ -9,24 +9,46 @@ form:
 
       fields:
         blog:
-          header.date:
-            type: datetime
-            label: Date
+          type: tab
+          title: Blog Item
 
-          header.taxonomy.topic:
-            type: text
-            label: Topic
-            default: opinion
+          fields:
+            summary:
+              type: section
+              title: Summary
+              underline: true
 
-          header.taxonomy.tag:
-            type: text
-            label: Tag
+            header.summary.enabled:
+              type: toggle
+              toggleable: true
+              label: Summary
+              highlight: 1
+              options:
+                1: Enabled
+                0: Disabled
 
-          header.username:
-            type: text
-            label: Author
+            header.summary.format:
+              type: select
+              toggleable: true
+              label: Format
+              classes: fancy
+              options:
+                'short': 'Use the first occurence of delimter or size'
+                'long': 'Summary delimiter will be ignored'
 
-          header.blog_url:
-            type: text
-            label: Blog URL
-            default:
+            header.summary.size:
+              type: text
+              toggleable: true
+              label: Size
+              classes: large
+              placeholder: 300
+              validate:
+                type: int
+                min: 1
+
+            header.summary.delimiter:
+              type: text
+              toggleable: true
+              label: Summary delimiter
+              classes: large
+              placeholder: ===
