--- a/blueprints/modular/showcase.yaml
+++ b/blueprints/modular/showcase.yaml
@@ -11,9 +11,14 @@ form:
               fields:
                 column1:
                   fields:
-                    type:
+                    name:
                       default: modular/showcase
                       @data-options: '\Grav\Common\Page\Pages::modularTypes'
+            overrides:
+              fields:
+                header.template:
+                  default: modular/showcase
+                  @data-options: '\Grav\Common\Page\Pages::modularTypes'
         buttons:
           type: tab
           title: Buttons
@@ -34,7 +39,7 @@ form:
                   label: Primary
                   highlight: 1
                   options:
-                      1: Yes
-                      0: No
+                    1: Yes
+                    0: No
                   validate:
-                      type: bool
+                    type: bool
