--- a/blueprints/modular/text.yaml
+++ b/blueprints/modular/text.yaml
@@ -11,9 +11,14 @@ form:
               fields:
                 column1:
                   fields:
-                    type:
+                    name:
                       default: modular/text
                       @data-options: '\Grav\Common\Page\Pages::modularTypes'
+            overrides:
+              fields:
+                header.template:
+                  default: modular/text
+                  @data-options: '\Grav\Common\Page\Pages::modularTypes'
         content:
           fields:
             uploads:
